--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </nav>
 </header>
 <main>
-  <p class="hero">Independent, evidence-led insights on China’s legal technology landscape—translated, contextualized, and compared for UK/EU/US buyers.</p>
+  <p class="hero">Independent, evidence-led insights on China’s legal technology landscape—translated, contextualized, and compared.</p>
   <section id="latest">
     <h2>Latest</h2>
     <div class="card">
