Update About page
Signed-off-by: qtsssss1110 <qiutinsanleon@outlook.com>

--- a/about/index.html
+++ b/about/index.html
@@ -1,33 +1,22 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>About · China Legal Tech Watch</title>
-  <meta name="description" content="About · China Legal Tech Watch">
-  <link rel="stylesheet" href="/assets/style.css">
-</head>
-<body>
-<header>
-  <h1>China Legal Tech Watch</h1>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/briefings/">Briefings</a>
-    <a href="/deep-dives/">Deep Dives</a>
-    <a href="/signals/">Signals</a>
-    <a href="/glossary/">Glossary</a>
-    <a href="/about/">About</a>
-    <a href="/subscribe/">Subscribe</a>
-  </nav>
-</header>
-<main>
-  <h2>About</h2>
-  <div class="card"><p>We analyze Chinese legal technology products, vendors, and policy shifts, then map findings to UK/EU/US buyer concerns (compliance, data residency, procurement, security, and support).</p>
-<p><strong>Methodology:</strong> Primary sources in Chinese with archived links; key passages translated; vendor claims tested against documentation and public demos.</p>
-</div>
-</main>
-<footer>
-  <p>© China Legal Tech Watch</p>
-</footer>
-</body>
-</html>
+---
+layout: default
+title: About
+---
+<section class="about-hero">
+  <h2>About China Legal Tech Watch</h2>
+  <p>We examine Chinese legal technology—vendors, products, and policy—and translate those developments for global legal and tech professionals.</p>
+</section>
+
+<section class="values">
+  <h3>Our Principles</h3>
+  <ul>
+    <li><strong>Evidence-first:</strong> Every claim backed by primary sources.</li>
+    <li><strong>Comparative lens:</strong> China vs UK/EU/US, differences that matter to buyers.</li>
+    <li><strong>Open collaboration:</strong> We welcome external contributors and review.</li>
+  </ul>
+</section>
+
+<section class="contact">
+  <h3>Contact</h3>
+  <p>Email: <a href="mailto:contact@chinalegaltechwatch.com">contact@chinalegaltechwatch.com</a></p>
+</section>
