--- a/subscribe/index.html
+++ b/subscribe/index.html
@@ -1,36 +1,11 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Subscribe · China Legal Tech Watch</title>
-  <meta name="description" content="Subscribe · China Legal Tech Watch">
-  <link rel="stylesheet" href="/assets/style.css">
-</head>
-<body>
-<header>
-  <h1>China Legal Tech Watch</h1>
-  <nav>
-    <a href="/">Home</a>
-    <a href="/briefings/">Briefings</a>
-    <a href="/deep-dives/">Deep Dives</a>
-    <a href="/signals/">Signals</a>
-    <a href="/glossary/">Glossary</a>
-    <a href="/about/">About</a>
-    <a href="/subscribe/">Subscribe</a>
-  </nav>
-</header>
-<main>
-  <h2>Subscribe</h2>
-  <div class="card"><p>Replace this with a Substack or Buttondown embed when ready.</p>
+---
+layout: default
+title: Subscribe
+---
+<h2>Subscribe</h2>
+<p>Get new briefings by email.</p>
+<!-- Replace with Substack/Buttondown embed later -->
 <form>
   <input type="email" placeholder="you@example.com" aria-label="Email">
   <button>Subscribe</button>
 </form>
-</div>
-</main>
-<footer>
-  <p>© China Legal Tech Watch</p>
-</footer>
-</body>
-</html>
